crates/cli/tests/snapshots/run_test__node__engines__adds_engines_constraint.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 302
expression: "read_to_string(fixture.path().join(\"package.json\")).unwrap()"
---
{
  "name": "test-cases",
  "private": true,
  "workspaces": [
    "*"
  ],
  "engines": {
    "node": "16.0.0"
  }
}

