crates/cli/tests/snapshots/run_test__node__engines__doesnt_add_engines_constraint.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 319
expression: "read_to_string(fixture.path().join(\"package.json\")).unwrap()"
---
{
  "name": "test-cases",
  "private": true,
  "workspaces": [
    "*"
  ]
}

